[gd_scene load_steps=3 format=3 uid="uid://carf2o1y7wvmc"]

[ext_resource type="Script" path="res://src/ui_elements/color_field.gd" id="1_2pe1j"]
[ext_resource type="Script" path="res://src/ui_elements/BetterLineEdit.gd" id="3_u777p"]

[node name="ColorField" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 22)
offset_right = 50.0
offset_bottom = 21.0
theme_override_constants/separation = 0
script = ExtResource("1_2pe1j")

[node name="LineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(54, 0)
layout_mode = 2
focus_mode = 1
theme_type_variation = &"RightConnectedLineEdit"
script = ExtResource("3_u777p")
code_font_tooltip = true

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(13, 0)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_type_variation = &"LeftConnectedButtonTransparent"

[connection signal="focus_entered" from="LineEdit" to="." method="_on_focus_entered"]
[connection signal="text_change_canceled" from="LineEdit" to="." method="_on_text_change_canceled"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_text_submitted"]
[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
