[gd_scene load_steps=5 format=3 uid="uid://bc45fp38kar6a"]

[ext_resource type="Script" path="res://src/ui_elements/transform_field.gd" id="1_5gokr"]
[ext_resource type="Script" path="res://src/ui_elements/BetterLineEdit.gd" id="2_aucxm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fnyvh"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.0666667)
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xcqgp"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.2, 0.34902, 0.501961, 1)
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[node name="TransformField" type="PanelContainer"]
size_flags_horizontal = 3
script = ExtResource("1_5gokr")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="FirstRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="X1" type="LineEdit" parent="VBox/FirstRow"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
mouse_filter = 1
script = ExtResource("2_aucxm")
hover_stylebox = SubResource("StyleBoxFlat_fnyvh")
focus_stylebox = SubResource("StyleBoxFlat_xcqgp")
code_font_tooltip = true

[node name="Y1" type="LineEdit" parent="VBox/FirstRow"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
mouse_filter = 1
script = ExtResource("2_aucxm")
hover_stylebox = SubResource("StyleBoxFlat_fnyvh")
focus_stylebox = SubResource("StyleBoxFlat_xcqgp")
code_font_tooltip = true

[node name="Z1" type="LineEdit" parent="VBox/FirstRow"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
mouse_filter = 1
script = ExtResource("2_aucxm")
hover_stylebox = SubResource("StyleBoxFlat_fnyvh")
focus_stylebox = SubResource("StyleBoxFlat_xcqgp")
code_font_tooltip = true

[node name="SecondRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="X2" type="LineEdit" parent="VBox/SecondRow"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
mouse_filter = 1
script = ExtResource("2_aucxm")
hover_stylebox = SubResource("StyleBoxFlat_fnyvh")
focus_stylebox = SubResource("StyleBoxFlat_xcqgp")
code_font_tooltip = true

[node name="Y2" type="LineEdit" parent="VBox/SecondRow"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
mouse_filter = 1
script = ExtResource("2_aucxm")
hover_stylebox = SubResource("StyleBoxFlat_fnyvh")
focus_stylebox = SubResource("StyleBoxFlat_xcqgp")
code_font_tooltip = true

[node name="Z2" type="LineEdit" parent="VBox/SecondRow"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
mouse_filter = 1
script = ExtResource("2_aucxm")
hover_stylebox = SubResource("StyleBoxFlat_fnyvh")
focus_stylebox = SubResource("StyleBoxFlat_xcqgp")
code_font_tooltip = true

[connection signal="focus_exited" from="VBox/FirstRow/X1" to="." method="_on_focus_exited"]
[connection signal="text_submitted" from="VBox/FirstRow/X1" to="." method="_on_text_submitted"]
[connection signal="focus_exited" from="VBox/FirstRow/Y1" to="." method="_on_focus_exited"]
[connection signal="text_submitted" from="VBox/FirstRow/Y1" to="." method="_on_text_submitted"]
[connection signal="focus_exited" from="VBox/FirstRow/Z1" to="." method="_on_focus_exited"]
[connection signal="text_submitted" from="VBox/FirstRow/Z1" to="." method="_on_text_submitted"]
[connection signal="focus_exited" from="VBox/SecondRow/X2" to="." method="_on_focus_exited"]
[connection signal="text_submitted" from="VBox/SecondRow/X2" to="." method="_on_text_submitted"]
[connection signal="focus_exited" from="VBox/SecondRow/Y2" to="." method="_on_focus_exited"]
[connection signal="text_submitted" from="VBox/SecondRow/Y2" to="." method="_on_text_submitted"]
[connection signal="focus_exited" from="VBox/SecondRow/Z2" to="." method="_on_focus_exited"]
[connection signal="text_submitted" from="VBox/SecondRow/Z2" to="." method="_on_text_submitted"]
